--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,33 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+
+
+    //Retrofit
+    implementation "androidx.profileinstaller:profileinstaller:1.3.1"
+
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
+    implementation "com.google.code.gson:gson:2.9.0"
+
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    def work_version = "2.8.1"
+
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    def lifecycle_version = "2.6.1"
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    //
+    //load Image
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 }
